--- a/app/src/main/res/xml-sw600dp/row_qwerty4.xml
+++ b/app/src/main/res/xml-sw600dp/row_qwerty4.xml
@@ -37,5 +37,7 @@
             latin:backgroundType="normal" />
         <include
             latin:keyboardLayout="@xml/key_period" />
+        <include
+            latin:keyboardLayout="@xml/key_to_symbol_or_com" />
     </Row>
 </merge>
