--- a/app/src/main/res/xml-sw600dp/rows_symbols.xml
+++ b/app/src/main/res/xml-sw600dp/rows_symbols.xml
@@ -69,5 +69,7 @@
             latin:keyWidth="10.0%p" />
         <include
             latin:keyboardLayout="@xml/row_symbols4" />
+        <include
+            latin:keyboardLayout="@xml/key_to_alpha_or_com" />
     </Row>
 </merge>
