--- a/app/src/main/res/xml-sw600dp/rows_symbols_shift.xml
+++ b/app/src/main/res/xml-sw600dp/rows_symbols_shift.xml
@@ -71,5 +71,7 @@
             latin:keyWidth="10%p" />
         <include
             latin:keyboardLayout="@xml/row_symbols_shift4" />
+        <include
+            latin:keyboardLayout="@xml/key_to_alpha_or_com" />
     </Row>
 </merge>
