--- a/app/src/main/res/xml/key_styles_common.xml
+++ b/app/src/main/res/xml/key_styles_common.xml
@@ -140,4 +140,10 @@
         latin:styleName="backFromMoreSymbolKeyStyle"
         latin:keySpec="!text/keylabel_to_symbol|!code/key_shift"
         latin:parentStyle="baseForLayoutSwitchKeyStyle" />
+    <key-style
+        latin:styleName="comKeyStyle"
+        latin:keySpec="!text/keyspec_popular_domain"
+        latin:keyLabelFlags="autoXScale|fontNormal|hasPopupHint|preserveCase"
+        latin:moreKeys="!text/morekeys_popular_domain"
+        latin:backgroundType="functional" />
 </merge>
