--- a/app/src/main/res/xml/key_to_symbol_or_com.xml
+++ b/app/src/main/res/xml/key_to_symbol_or_com.xml
@@ -2,7 +2,7 @@
 <!--
 /*
 **
-** Copyright 2014, The Android Open Source Project
+** Copyright 2013, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -21,23 +21,18 @@
 <merge
     xmlns:latin="http://schemas.android.com/apk/res-auto"
 >
-    <Row
-        latin:keyWidth="9.0%p"
-        latin:backgroundType="functional"
-    >
-        <Key
-            latin:keyStyle="toSymbolKeyStyle"
-            latin:keyWidth="10.0%p" />
-        <include
-            latin:keyboardLayout="@xml/key_comma" />
-        <!-- Space key. -->
-        <include
-            latin:keyXPos="19.0%p"
-            latin:keyboardLayout="@xml/key_space_7kw"
-            latin:backgroundType="normal" />
-        <include
-            latin:keyboardLayout="@xml/key_period" />
-        <include
-            latin:keyboardLayout="@xml/key_to_symbol_or_com" />
-    </Row>
+    <switch>
+        <case
+            latin:mode="email|url"
+        >
+            <Key
+                latin:keyStyle="comKeyStyle"
+                latin:keyWidth="fillRight" />
+        </case>
+        <default>
+            <Key
+                latin:keyStyle="toSymbolKeyStyle"
+                latin:keyWidth="fillRight" />
+        </default>
+    </switch>
 </merge>
